--- a/content/index.mdx
+++ b/content/index.mdx
@@ -3,7 +3,7 @@
 
 # OpenNeuro
 
-A real-time audio pipeline framework for building voice AI applications.
+Your Virtual AI Companion.
 
 <a href="/user-manual" style={{ display: "inline-block", marginTop: "1.5rem", padding: "0.75rem 2rem", backgroundColor: "#2563eb", color: "white", borderRadius: "0.5rem", textDecoration: "none", fontWeight: 600, fontSize: "1.1rem" }}>Get Started →</a>
 
